connection with DB

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    //"EmployeeDBConnection": "Server=DESKTOPLGA80L2\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=true"
+    "DevConnections": "Server=DESKTOPLGA80L2\\SQLEXPRESS;Database=EmployeeDB;Trusted_connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
