add identity to asp.net core

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -4,7 +4,7 @@
     "DevConnections": "Server=DESKTOPLGA80L2\\SQLEXPRESS;Database=EmployeeDB;Trusted_connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
-    "IncludeScopes": false,
+    //"IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
