fix connections Error

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"EmployeeDBConnection": "Server=DESKTOPLGA80L2\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=true"
-    "DevConnections": "Server=DESKTOPLGA80L2\\SQLEXPRESS;Database=EmployeeDB;Trusted_connection=True;MultipleActiveResultSets=True"
+    "DevConnections": "Server=MSI\\SQLEXPRESS;Database=EmployeeDB;Trusted_connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     //"IncludeScopes": false,
